syntax = "proto3";
package cosmosapi;

message Coin {
    string amount = 1;
    string denom = 2;
}

message StdFee {
    repeated Coin amount = 1;
    string gas = 2;
}

message SignData{
    string account_number = 1;
    string chain_id = 2;
    StdFee fee = 3;
    string memo = 4;
    repeated Msg msgs = 5;
    string sequence = 6;
}

message Msg{
    string type = 1;
    MsgDelegateValue value = 2;
}

message MsgValue{
    repeated Coin amount = 1;
    string delegator_address = 2;
    string validator_address = 3;
}

message CosmosTxReq {
    SignData signData=1;
    string path = 2;
    string payment_dis = 3;
    string to_dis = 4;
    string from_dis = 5;
    string fee_dis = 6;
}

message CosmosTxRes {
    string tx_data = 1;
    string tx_hash = 2;
}

message CosmosAddressReq {
    string path = 1;
}

message CosmosAddressRes {
    string address = 1;
}